test/visibility/rename/innerExcept.good
innerExcept.chpl:13: In module 'M':
innerExcept.chpl:14: error: cannot rename symbol 'bar' as it is not defined in 'A'
